Added temp,humid,wind list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <section>
             <ul>
                 <li id="cityName"></li>
+                <li id="temp"></li>
+                <li id="humidity"></li>
+                <li id="windSpeed"></li>
             </ul>
 
         </section>
