--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                     <input class="input" type="text" id="searchCity" placeholder="Check Weather">
                 </div>
                 <div class="control">
-                     <a class="button is-info">
-                          Search
-                     </a>
+                     <a class="button is-info" id="btnScr">Search</a>
                 </div>
             </div>
         </section>
