Add footer with link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,17 @@
 
             </section>
 
-            <section></section>
+            <section>
+
+            </section>
+
+            <footer class="footer">
+                <div class="content has-text-centered">
+                  <p>
+                    <strong>Jet off Weather</strong> by <a href="https://stephimarie.github.io/All_about_SMarie/.">Stephanie Marie</a>.
+                  </p>
+                </div>
+              </footer>
         </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
