--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
     </head>
     <body>
 
-        <header></header>
+        <header>
+            <section class="hero is-primary">
+                <div class="hero-body">
+                  <p class="title">
+                    Jet off Weather
+                  </p>
+                  <p class="subtitle">
+                    Everything you need to <strong>create a website</strong> with Bulma
+                  </p>
+                </div>
+              </section>
+              
+              <nav class="navbar" role="navigation" aria-label="dropdown navigation">
+                <div class="navbar-menu">
+                  <div class="navbar-start">
+                    <div class="navbar-item has-dropdown has-dropdown-up is-active"></div>
+                  </div>
+                </div>
+              </nav>
+        </header>
 
         <main>
 
