Fix Nav text to in subtitle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Jet off Weather
                   </p>
                   <p class="subtitle">
-                    Everything you need to <strong>create a website</strong> with Bulma
+                    Everything you need to <strong>plan your trip</strong> 
                   </p>
                 </div>
               </section>
