--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <header>
-            <section class="hero is-primary">
+            <section class="hero is-black">
                 <div class="hero-body">
                   <p class="title">
                     Jet off Weather
