--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@
                   </p>
                 </div>
               </section>
-              
-              <nav class="navbar" role="navigation" aria-label="dropdown navigation">
-                <div class="navbar-menu">
-                  <div class="navbar-start">
-                    <div class="navbar-item has-dropdown has-dropdown-up is-active"></div>
-                  </div>
-                </div>
-              </nav>
+              <nav class="navbar" role="navigation" aria-label="dropdown navigation"></nav>
         </header>
 
         <main>
