--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+        <link
+        rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <!-- Compressed CSS -->
 
 
@@ -15,57 +16,59 @@
         <header>
             <section class="hero is-black">
                 <div class="hero-body">
-                  <p class="title">
-                    Jet off Weather
-                  </p>
-                  <p class="subtitle">
-                    Everything you need to <strong>plan your trip</strong> 
-                  </p>
+                    <p class="title">
+                        Jet off Weather
+                    </p>
+                    <p class="subtitle">
+                        Everything you need to
+                        <strong>plan your trip</strong>
+                    </p>
                 </div>
-              </section>
-              <nav class="navbar" role="navigation" aria-label="dropdown navigation"></nav>
+            </section>
+            <nav class="navbar" role="navigation" aria-label="dropdown navigation"></nav>
         </header>
 
         <main>
 
 
             <!-- <section id="searchSection">
-                <input type="text" id="searchCity" class="form-control"/>
-                <div>
-                    <button id="btnSrc">Search</button>
-
-                </div> -->
-                <div class="field has-addons">
-                                <div class="control">
-                                    <input class="input" type="text" id="searchCity" placeholder="Check Weather">
-                                </div>
-                                <div class="control">
-                                     <button class="button is-info" id="btnSrc">Search</button>
-                                </div>
-                            </div>
-            </section>
-
-            <section>
-                <ul>
-                    <li id="cityName"></li>
-                </ul>
-
-            </section>
-
-            <section>
-
-            </section>
-
-            <footer class="footer">
-                <div class="content has-text-centered">
-                  <p>
-                    <strong>Jet off Weather</strong> by <a href="https://stephimarie.github.io/All_about_SMarie/.">Stephanie Marie</a>.
-                  </p>
+                                                                                        <input type="text" id="searchCity" class="form-control"/>
+                                                                                        <div>
+                                                                                            <button id="btnSrc">Search</button>
+                                                                        
+                                                                                        </div> -->
+            <div class="field has-addons">
+                <div class="control">
+                    <input class="input" type="text" id="searchCity" placeholder="Check Weather">
                 </div>
-              </footer>
-        </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-        <script src = "app.js"></script>
+                <div class="control">
+                    <button class="button is-info" id="btnSrc">Search</button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <ul>
+                <li id="cityName"></li>
+                <li id="condition"></li>
+                <li id="temp"></li>
+                <li id="humidity"></li>
+                <li id="wind speed"></li>
+                <li id="uv temp"></li>
+            </ul>
+
+        </section>
+
+        <section></section>
+
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>
+                    <strong>Jet off Weather</strong>
+                    by
+                    <a href="https://stephimarie.github.io/All_about_SMarie/.">Stephanie Marie</a>.
+                </p>
+            </div>
+        </footer>
     </body>
-</html>
+</html></main><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script><script src="app.js"></script></body></html>
