--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-< !DOCTYPE html > <html lang="en"> < head > <meta charset="UTF-8"> < meta name = "viewport" content = "width=device-width, initial-scale=1.0" > <link rel="stylesheet" href="style.css"> < link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" >
-<!-- Compressed CSS --> <title>Jet off Weather</title></head><body>
+<!DOCTYPE html > 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8"> <meta name = "viewport" content = "width=device-width, initial-scale=1.0" > 
+<link rel="stylesheet" href="style.css"> 
+<link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" >
+<!-- Compressed CSS --> 
+
+<title>Jet off Weather</title>
+</head>
+<body>
 
 <header>
     <section class="hero is-black">
@@ -18,13 +27,6 @@
 
 <main>
 
-
-    <!-- <section id="searchSection">
-                                                                                            <input type="text" id="searchCity" class="form-control"/>
-                                                                                            <div>
-                                                                                                <button id="btnSrc">Search</button>
-                                                                            
-                                                                                            </div> -->
     <div class="field has-addons">
         <div class="control">
             <input class="input" type="text" id="searchCity" placeholder="Check Weather"></div>
@@ -46,7 +48,9 @@
 
     </section>
 
-    <section></section>
+    <section>
+    
+    </section>
 
     <footer class="footer">
         <div class="content has-text-centered">
